--- a/QuX/Ads.conf
+++ b/QuX/Ads.conf
@@ -3,4 +3,4 @@ hostname = *.weibo.cn,*.weibo.com,*.ugdtimg.com
 
 # > Weibo
 ^https?:\/\/adimg\.uve\.weibo\.com\/.+\.(jpg|png) url reject
-^https?:\/\/pgdt\..ugdtimg\.com\/.+\.(jpg|png) url reject
+^https?:\/\/pgdt\.ugdtimg\.com\/.+\.(jpg|png) url reject
