--- a/subconverter/elon-self.ini
+++ b/subconverter/elon-self.ini
@@ -33,3 +33,5 @@ custom_proxy_group=DirOrPro`select`[]DIRECT`[]Proxy
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+add_emoji=false
