--- a/subconverter/elon-self.ini
+++ b/subconverter/elon-self.ini
@@ -6,6 +6,7 @@ ruleset=Potential,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/su
 ruleset=Domestic,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/China.list
 ruleset=Netflix,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/Netflix.list
 ruleset=GlobalMedia,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/Streaming.list
+ruleset=Proxy,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/Port.list
 ruleset=Proxy,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/Global.list
 ruleset=DIRECT,https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/LAN.list
 ruleset=Domestic,[]GEOIP,CN
