--- a/subconverter/elon-self.ini
+++ b/subconverter/elon-self.ini
@@ -19,11 +19,11 @@ custom_proxy_group=GlobalMedia`select`[]AutoHK`[]AutoUS`[]Proxy`[]DIRECT
 custom_proxy_group=ProxySelect`select`.*
 custom_proxy_group=AutoHK`url-test`(香港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=AutoUS`url-test`(美国|US)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK`select`香港
-custom_proxy_group=US`select`美国
+custom_proxy_group=HK`select`(香港|港)
+custom_proxy_group=US`select`(美国|美)
 custom_proxy_group=JP`select`日本
 custom_proxy_group=SGP`select`新加坡
-custom_proxy_group=EURO`select`俄罗斯`德国
+custom_proxy_group=EURO`select`俄罗斯`德国`英国`土耳其
 custom_proxy_group=Netflix`select`[]GlobalMedia`[]Proxy`[]ProxySelect`[]DIRECT
 custom_proxy_group=Potential`select`[]Proxy`[]DIRECT
 custom_proxy_group=Schooledu`select`[]Proxy`[]DIRECT
