--- a/subconverter/elon-self.ini
+++ b/subconverter/elon-self.ini
@@ -36,3 +36,5 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 add_emoji=false
+
+clash_rule_base=https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/clash_base.yml
