--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -7,7 +7,7 @@ custom_proxy_group=Bilibili-iQiyi`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-A
 custom_proxy_group=BilibiliPetional`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]Req-CN-True`[]CN-Auto`[]CN-True-Select`[]HK-CN-Select
 custom_proxy_group=iQiyiPetional`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]Req-CN-True`[]CN-Auto`[]CN-True-Select`[]HK-CN-Select
 custom_proxy_group=EastAsia`select`[]DIRECT`[]HK-CN-Auto
-custom_proxy_group=NeteaseUnlocker`select`[]DIRECT`[]Req-CN-True`Streaming_CN`解锁
+custom_proxy_group=NeteaseUnlocker`select`[]DIRECT`[]Req-CN-True`Streaming_CN`网易
 custom_proxy_group=nfmovies`select`[]DIRECT`[]Req-CN-True
 custom_proxy_group=nfmovies2`select`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`HKT`CN2`Streaming_CN`[]DIRECT
 custom_proxy_group=cnstream`select`[]nfmovies2`台湾`HK-1X`[]DIRECT
