--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -26,3 +26,6 @@ overwrite_original_rules=true
 add_emoji=false
 
 clash_rule_base=https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/clash_base.yml
+
+rename=\\_@-
+rename=解锁@DesperadoJ解锁
