--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -9,7 +9,7 @@ custom_proxy_group=iQiyiPetional`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Au
 custom_proxy_group=EastAsia`select`[]DIRECT`[]HK-CN-Auto
 custom_proxy_group=NeteaseUnlocker`select`[]DIRECT`[]Req-CN-True`Streaming_CN`解锁
 custom_proxy_group=nfmovies`select`[]DIRECT`[]Req-CN-True
-custom_proxy_group=nfmovies2`select`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`HKT`CN2`Streaming_CN`[]DIRECT
+custom_proxy_group=nfmovies2`select`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`HKT`(港.*CN2)`Streaming_CN`[]DIRECT
 custom_proxy_group=cnstream`select`[]nfmovies2`台湾`HK-1X`[]DIRECT
 custom_proxy_group=Req-CN-True`select`[]CN-Auto`[]CN-True-Select`Streaming_CN`[]DIRECT
 custom_proxy_group=CN-Auto`url-test`(回国)`http://www.gstatic.com/generate_204`1200
