--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -15,8 +15,8 @@ custom_proxy_group=Req-CN-True`select`[]CN-Auto`[]CN-True-Select`Streaming_CN`[]
 custom_proxy_group=CN-Auto`url-test`(回国)`http://www.gstatic.com/generate_204`1200
 custom_proxy_group=CN-True-Select`select`回国`Streaming_CN
 custom_proxy_group=HK-CN-LowRate-Auto`url-test`(香港.*0.1倍)`http://www.gstatic.com/generate_204`600
-custom_proxy_group=HK-CN-Auto`url-test`(HKT|香港.*CN2|Streaming_CN)`http://www.gstatic.com/generate_204`600
-custom_proxy_group=HK-CN-Select`select`HKT`(香港.*CN2)`Streaming_CN
+custom_proxy_group=HK-CN-Auto`url-test`(HKT|港.*CN2|Streaming_CN)`http://www.gstatic.com/generate_204`600
+custom_proxy_group=HK-CN-Select`select`HKT`(港.*CN2)`Streaming_CN
 custom_proxy_group=Emby`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select
 custom_proxy_group=ShieldTV`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select
 custom_proxy_group=Test`select`[]DIRECT`[]REJECT
@@ -28,5 +28,4 @@ add_emoji=false
 
 clash_rule_base=https://raw.githubusercontent.com/elonj/Selfuse-Rule/master/subconverter/clash_base.yml
 
-rename=\\_@T
 rename=解锁@DesperadoJ解锁
