--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -17,8 +17,8 @@ custom_proxy_group=CN-True-Select`select`回国`Streaming_CN
 custom_proxy_group=HK-CN-LowRate-Auto`url-test`(香港.*0.1倍)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=HK-CN-Auto`url-test`(HKT|港.*CN2|Streaming_CN)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=HK-CN-Select`select`HKT`(港.*CN2)`Streaming_CN
-custom_proxy_group=Emby`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select
-custom_proxy_group=ShieldTV`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select
+custom_proxy_group=Emby`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select`[]cnstream
+custom_proxy_group=ShieldTV`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]nfmovies2`[]CN-True-Select`[]HK-CN-Select`[]cnstream
 custom_proxy_group=Test`select`[]DIRECT`[]REJECT
 
 enable_rule_generator=true
