--- a/subconverter/openclash-self.ini
+++ b/subconverter/openclash-self.ini
@@ -8,12 +8,12 @@ custom_proxy_group=BilibiliPetional`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN
 custom_proxy_group=iQiyiPetional`select`[]DIRECT`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`[]Req-CN-True`[]CN-Auto`[]CN-True-Select`[]HK-CN-Select
 custom_proxy_group=EastAsia`select`[]DIRECT`[]HK-CN-Auto
 custom_proxy_group=NeteaseUnlocker`select`[]DIRECT`[]Req-CN-True`Streaming_CN`解锁
-custom_proxy_group=nfmovies`select`[]DIRECT`[]Req-CN-True
+custom_proxy_group=nfmovies`select`[]DIRECT`[]Req-CN-True`[]HK-CN-Select`[]cnstream`[]AliCNDocker-wsfly`[]AliCNDocker
 custom_proxy_group=nfmovies2`select`[]HK-CN-LowRate-Auto`[]HK-CN-Auto`HKT`(港.*CN2)`Streaming_CN`[]DIRECT
 custom_proxy_group=cnstream`select`[]nfmovies2`台湾`HK-1X`[]DIRECT
-custom_proxy_group=Req-CN-True`select`[]CN-Auto`[]CN-True-Select`Streaming_CN`[]DIRECT
+custom_proxy_group=Req-CN-True`select`[]CN-Auto`[]CN-True-Select`[]AliCNDocker-wsfly`[]AliCNDocker`Streaming_CN`[]DIRECT
 custom_proxy_group=CN-Auto`url-test`(回国)`http://www.gstatic.com/generate_204`1200
-custom_proxy_group=CN-True-Select`select`回国`Streaming_CN
+custom_proxy_group=CN-True-Select`select`[]AliCNDocker-wsfly`[]AliCNDocker`回国`Streaming_CN
 custom_proxy_group=HK-CN-LowRate-Auto`url-test`(香港.*0.1倍)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=HK-CN-Auto`url-test`(HKT|港.*CN2|Streaming_CN)`http://www.gstatic.com/generate_204`600
 custom_proxy_group=HK-CN-Select`select`HKT`(港.*CN2)`Streaming_CN
