--- a/QuX/Advertising.conf
+++ b/QuX/Advertising.conf
@@ -347,76 +347,77 @@
 # ^https?:\/\/gateway\.shouqiev\.com\/fsda\/app\/bootImage\.json url reject
 # ^https?:\/\/gfp\.veta\.naver\.com\/adcall\? url reject
 # ^https?:\/\/gg\w+?\.cmvideo\.cn\/v\d\/iflyad\/ url reject
-^https?:\/\/ggic\d?\.cmvideo\.cn\/ad\/ url reject
-^https?:\/\/ggv\.cmvideo\.cn\/v1\/iflyad\/ url reject-img
-^https?:\/\/ggx\.cmvideo\.cn\/request\/ url reject
-^https?:\/\/goblin\.hupu\.com/[^/]+/[^/]+\/interfaceAd\/ url reject
-^https?:\/\/gss0\.bdstatic\.com\/.+?\/static\/wiseindex\/img\/bd_red_packet\.png url reject-img
-^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/car-rest\/webservice\/passenger\/recommendADs url reject
-^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/zhuanche-passenger-token\/leachtoken\/webservice\/homepage\/queryADs url reject
-^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/zhuanche-passengerController\/notk\/passenger\/recommendADs url reject
-^https?:\/\/gw\.aihuishou\.com\/app-portal\/home\/getadvertisement url reject
-^https?:\/\/gw\.csdn\.net\/cms-app\/v\d+\/home_page\/open_advertisement url reject
-^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject
-^https?:\/\/h\w{2}\.hxsame\.hexun\.com url reject
-^https?:\/\/haojia\.m\.smzdm\.com\/detail_modul\/banner url reject
-^https?:\/\/heic\.alicdn\.com\/tps\/i4\/.+?\.jpg_1200x1200q90\.jpg_\.heic$ url reject
-^https?:\/\/hk\.app\.joox\.com\/billsrv\/clientBatchAdReport url reject
-^https?:\/\/hk\.app\.joox\.com\/retrieval\/getAd url reject
-^https?:\/\/home\.mi\.com\/cgi-op\/api\/v\d\/recommendation\/banner url reject
-^https?:\/\/hui\.sohu\.com\/predownload2\/? url reject-img
-^https?:\/\/huichuan\.sm\.cn\/jsad url reject
-^https?:\/\/i1\.hoopchina\.com\.cn\/blogfile\/.+?_\d{3}x\d{4} url reject-img
-^https?:\/\/i\.ys7\.com\/api\/ads url reject
-^https?:\/\/i\d\.hoopchina\.com\.cn/blogfile\\/\/d+\\/\/d+\/BbsImg\.(?<=(big.(png|jpg)))$ url reject-img
-^https?:\/\/iad.*?mat\.music\.12[67]\.net/\w+\.(jpg|mp4) url reject-img
-^https?:\/\/iad.*mat\.[a-z]*\.12[67]\.net/\w+\.(jpg|mp4)$ url reject
-^https?:\/\/iadmusicmat\.music\.126\.net\/.*?jpg$ url reject
-^https?:\/\/iapi\.bishijie\.com\/actopen\/advertising\/ url reject
-^https?:\/\/ib-soft\.net\/icleaner\/txt\/ad_priority\.txt$ url reject
-^https?:\/\/icc\.one\/iFreeTime\/xid32uxaoecnfv2\/ url reject
-^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/fusion_switch url reject-img
-^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
-^https?:\/\/ifengad\.3g\.ifeng\.com\/ad\/pv\.php\?stat= url reject-img
-^https?:\/\/iflow\.uczzd\.cn\/log\/ url reject
-^https?:\/\/ih2\.ireader\.com\/zyapi\/bookstore\/ad\/ url reject
-^https?:\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad url reject
-^https?:\/\/ih2\.ireader\.com\/zycl\/api\/ad\/ url reject
-^https?:\/\/iis1\.deliver\.ifeng\.com\/getmcode\?adid= url reject-img
-^https?:\/\/image1\.chinatelecom-ec\.com\/images\/.*?\/client\w+\.jpg url reject-img
-^https?:\/\/image1\.chinatelecom-ec\.com\/images\/.+?\/\d{13}\.jpg url reject-img
-^https?:\/\/image\.airav\.cc\/AirADPic\/.+?\.gif url reject-img
-^https?:\/\/image\.suning\.cn\/uimg\/ma\/ad\/ url reject
-^https?:\/\/images\.91160\.com\/primary\/ url reject-img
-^https?:\/\/images\.client\.vip\.xunlei\.com\/.+?\/advert\/ url reject
-^https?:\/\/images\.kartor\.cn\/.+?\.html url reject-img
-^https?:\/\/imeclient\.openspeech\.cn\/adservice\/ url reject
-^https?:\/\/img-ys011\.didistatic\.com\/static\/ad_oss\/image-\d{4}-\d{4}\/ url reject
-^https?:\/\/img01\.10101111cdn\.com\/adpos\/ url reject
-^https?:\/\/img01\.10101111cdn\.com\/adpos\/share\/ url reject-img
-^https?:\/\/img1\.126\.net\/.+?dpi=\w{7,8} url reject-img
-^https?:\/\/img1\.126\.net\/channel14\/ url reject-img
-^https?:\/\/img\.53site\.com\/Werewolf\/AD\/ url reject-img
-^https?:\/\/img\.ddrk\.me\/ad190824 url reject-img
-^https?:\/\/img\.ddrk\.me\/cover\.png url reject-img
-^https?:\/\/img\.ihytv\.com\/material\/adv\/img\/ url reject-img
-^https?:\/\/img\.jiemian\.com\/ads\/ url reject
-^https?:\/\/img\.meituan\.net\/(adunion|display|dpmobile|midas)\/\w+\.(gif|jpg|jpg\.webp)$ url reject
-^https?:\/\/img\.meituan\.net\/midas\/ url reject
-^https?:\/\/img\.rr\.tv\/banner\/.+?\.jpg url reject-img
-^https?:\/\/img\.umetrip\.com\/fs\/advert/ url reject
-^https?:\/\/img\.yun\.01zhuanche\.com\/statics\/app\/advertisement\/.+?-750-1334 url reject-img
-^https?:\/\/img\.zuoyebang\.cc\/zyb-image[\s\S]*?\.jpg url reject-img
-^https?:\/\/img\d+\.10101111cdn\.com\/adpos\/ url reject
-^https?:\/\/img\d+\.360buyimg\.com\/jddjadvertise\/ url reject
-^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject
-^https?:\/\/img\d{2}\.ddimg\.cn\/upload_img\/.+?\/670x900 url reject-img
-^https?:\/\/img\d{2}\.ddimg\.cn\/upload_img\/.+?\/750x1064 url reject-img
-^https?:\/\/img\w\.g\.pptv\.com url reject
-^https?:\/\/imgcache\.qq\.com\/qqlive\/ url reject-img
-^https?:\/\/impservice.+?youdao.com url reject
-^https?:\/\/impservice\.dictapp\.youdao\.com\/imp\/request url reject-img
-^https?:\/\/interface(\d)?\.music\.163\.com/eapi/(ad|abtest|sp|hot|store|search/(specialkeyword|defaultkeyword|hot)) url reject
+
+# ^https?:\/\/ggic\d?\.cmvideo\.cn\/ad\/ url reject
+# ^https?:\/\/ggv\.cmvideo\.cn\/v1\/iflyad\/ url reject-img
+# ^https?:\/\/ggx\.cmvideo\.cn\/request\/ url reject
+# ^https?:\/\/goblin\.hupu\.com/[^/]+/[^/]+\/interfaceAd\/ url reject
+# ^https?:\/\/gss0\.bdstatic\.com\/.+?\/static\/wiseindex\/img\/bd_red_packet\.png url reject-img
+# ^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/car-rest\/webservice\/passenger\/recommendADs url reject
+# ^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/zhuanche-passenger-token\/leachtoken\/webservice\/homepage\/queryADs url reject
+# ^https?:\/\/gw-passenger\.01zhuanche\.com\/gw-passenger\/zhuanche-passengerController\/notk\/passenger\/recommendADs url reject
+# ^https?:\/\/gw\.aihuishou\.com\/app-portal\/home\/getadvertisement url reject
+# ^https?:\/\/gw\.csdn\.net\/cms-app\/v\d+\/home_page\/open_advertisement url reject
+# ^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject
+# ^https?:\/\/h\w{2}\.hxsame\.hexun\.com url reject
+# ^https?:\/\/haojia\.m\.smzdm\.com\/detail_modul\/banner url reject
+# ^https?:\/\/heic\.alicdn\.com\/tps\/i4\/.+?\.jpg_1200x1200q90\.jpg_\.heic$ url reject
+# ^https?:\/\/hk\.app\.joox\.com\/billsrv\/clientBatchAdReport url reject
+# ^https?:\/\/hk\.app\.joox\.com\/retrieval\/getAd url reject
+# ^https?:\/\/home\.mi\.com\/cgi-op\/api\/v\d\/recommendation\/banner url reject
+# ^https?:\/\/hui\.sohu\.com\/predownload2\/? url reject-img
+# ^https?:\/\/huichuan\.sm\.cn\/jsad url reject
+# ^https?:\/\/i1\.hoopchina\.com\.cn\/blogfile\/.+?_\d{3}x\d{4} url reject-img
+# ^https?:\/\/i\.ys7\.com\/api\/ads url reject
+# ^https?:\/\/i\d\.hoopchina\.com\.cn/blogfile\\/\/d+\\/\/d+\/BbsImg\.(?<=(big.(png|jpg)))$ url reject-img
+# ^https?:\/\/iad.*?mat\.music\.12[67]\.net/\w+\.(jpg|mp4) url reject-img
+# ^https?:\/\/iad.*mat\.[a-z]*\.12[67]\.net/\w+\.(jpg|mp4)$ url reject
+# ^https?:\/\/iadmusicmat\.music\.126\.net\/.*?jpg$ url reject
+# ^https?:\/\/iapi\.bishijie\.com\/actopen\/advertising\/ url reject
+# ^https?:\/\/ib-soft\.net\/icleaner\/txt\/ad_priority\.txt$ url reject
+# ^https?:\/\/icc\.one\/iFreeTime\/xid32uxaoecnfv2\/ url reject
+# ^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/fusion_switch url reject-img
+# ^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
+# ^https?:\/\/ifengad\.3g\.ifeng\.com\/ad\/pv\.php\?stat= url reject-img
+# ^https?:\/\/iflow\.uczzd\.cn\/log\/ url reject
+# ^https?:\/\/ih2\.ireader\.com\/zyapi\/bookstore\/ad\/ url reject
+# ^https?:\/\/ih2\.ireader\.com\/zyapi\/self\/screen\/ad url reject
+# ^https?:\/\/ih2\.ireader\.com\/zycl\/api\/ad\/ url reject
+# ^https?:\/\/iis1\.deliver\.ifeng\.com\/getmcode\?adid= url reject-img
+# ^https?:\/\/image1\.chinatelecom-ec\.com\/images\/.*?\/client\w+\.jpg url reject-img
+# ^https?:\/\/image1\.chinatelecom-ec\.com\/images\/.+?\/\d{13}\.jpg url reject-img
+# ^https?:\/\/image\.airav\.cc\/AirADPic\/.+?\.gif url reject-img
+# ^https?:\/\/image\.suning\.cn\/uimg\/ma\/ad\/ url reject
+# ^https?:\/\/images\.91160\.com\/primary\/ url reject-img
+# ^https?:\/\/images\.client\.vip\.xunlei\.com\/.+?\/advert\/ url reject
+# ^https?:\/\/images\.kartor\.cn\/.+?\.html url reject-img
+# ^https?:\/\/imeclient\.openspeech\.cn\/adservice\/ url reject
+# ^https?:\/\/img-ys011\.didistatic\.com\/static\/ad_oss\/image-\d{4}-\d{4}\/ url reject
+# ^https?:\/\/img01\.10101111cdn\.com\/adpos\/ url reject
+# ^https?:\/\/img01\.10101111cdn\.com\/adpos\/share\/ url reject-img
+# ^https?:\/\/img1\.126\.net\/.+?dpi=\w{7,8} url reject-img
+# ^https?:\/\/img1\.126\.net\/channel14\/ url reject-img
+# ^https?:\/\/img\.53site\.com\/Werewolf\/AD\/ url reject-img
+# ^https?:\/\/img\.ddrk\.me\/ad190824 url reject-img
+# ^https?:\/\/img\.ddrk\.me\/cover\.png url reject-img
+# ^https?:\/\/img\.ihytv\.com\/material\/adv\/img\/ url reject-img
+# ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
+# ^https?:\/\/img\.meituan\.net\/(adunion|display|dpmobile|midas)\/\w+\.(gif|jpg|jpg\.webp)$ url reject
+# ^https?:\/\/img\.meituan\.net\/midas\/ url reject
+# ^https?:\/\/img\.rr\.tv\/banner\/.+?\.jpg url reject-img
+# ^https?:\/\/img\.umetrip\.com\/fs\/advert/ url reject
+# ^https?:\/\/img\.yun\.01zhuanche\.com\/statics\/app\/advertisement\/.+?-750-1334 url reject-img
+# ^https?:\/\/img\.zuoyebang\.cc\/zyb-image[\s\S]*?\.jpg url reject-img
+# ^https?:\/\/img\d+\.10101111cdn\.com\/adpos\/ url reject
+# ^https?:\/\/img\d+\.360buyimg\.com\/jddjadvertise\/ url reject
+# ^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject
+# ^https?:\/\/img\d{2}\.ddimg\.cn\/upload_img\/.+?\/670x900 url reject-img
+# ^https?:\/\/img\d{2}\.ddimg\.cn\/upload_img\/.+?\/750x1064 url reject-img
+# ^https?:\/\/img\w\.g\.pptv\.com url reject
+# ^https?:\/\/imgcache\.qq\.com\/qqlive\/ url reject-img
+# ^https?:\/\/impservice.+?youdao.com url reject
+# ^https?:\/\/impservice\.dictapp\.youdao\.com\/imp\/request url reject-img
+# ^https?:\/\/interface(\d)?\.music\.163\.com/eapi/(ad|abtest|sp|hot|store|search/(specialkeyword|defaultkeyword|hot)) url reject
 ^https?:\/\/intl\.iqiyi\.com\/ad_external\/ url reject
 ^https?:\/\/intl\.iqiyi\.com\/video\/advertise url reject
 ^https?:\/\/ios\.lantouzi\.com\/api\/startpage url reject
