--- a/QuX/Advertising.conf
+++ b/QuX/Advertising.conf
@@ -106,4 +106,24 @@
 ^https?:\/\/www\.inoreader\.com\/adv\/ url reject
 ^https?:\/\/www\.ft\.com\/__origami\/service\/image\/v2\/images\/raw\/https%3A%2F%2Fcreatives\.ftimg\.net%2Fads* url reject-img
 
-hostname = *.l.qq.com,*.tc.qq.com,ad.sina.com,ad.sina.com.cn,api.xueqiu.com,bdsp-x.jd.com,mobile.youku.com,api.youku.com,hd.youku.com,iyes.youku.com,*.beacon.qq.com,3gimg.qq.com,4gimg.map.qq.com,afd.baidu.com,als.baidu.com,c.tieba.baidu.com,cover.baidu.com,fcvbjbcebos.baidu.com,issuecdn.baidupcs.com,log.baidu.com,www.baidu.com,gdt.qq.com,m.taobao.com,vip.iqiyi.com,iface.iqiyi.com,iface2.iqiyi.com,intl.iqiyi.com,d.sinaimg.cn,edit.sinaapp.com,free.sinaimg.cn,saxw.sina.cn,saxw.sina.com.cn,u1.img.mobile.sina.cn,adse.ximalaya.com,api.douban.com,api.jr.mi.com,api.m.mi.com,api.smzdm.com,api.vuevideo.net,api.weibo.cn,weibointl.api.weibo.cn,api.musical.ly,api.tiktokv.com,appconf.mail.163.com,baichuan.baidu.com,connect.facebook.net,cover.baidu.com,ddrk.me,gss0.bdstatic.com,haojia.m.smzdm.com,*.music.126.net,*.music.127.net,img1.126.net,mi.gdt.qq.com,mp.weixin.qq.com,ms.jr.jd.com,msg.umengcloud.com,pan.baidu.com,sdkapp.uve.weibo.com,wbapp.uve.weibo.com,simg.s.weibo.com,static.vuevideo.net,tqt.weibo.cn,vv.video.qq.com,www.inoreader.com,www.ft.com
+# YouTube去广告
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+
+
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) url 302 $1&ctier=A$2
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
+
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+
+hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.l.qq.com,*.tc.qq.com,ad.sina.com,ad.sina.com.cn,api.xueqiu.com,bdsp-x.jd.com,mobile.youku.com,api.youku.com,hd.youku.com,iyes.youku.com,*.beacon.qq.com,3gimg.qq.com,4gimg.map.qq.com,afd.baidu.com,als.baidu.com,c.tieba.baidu.com,cover.baidu.com,fcvbjbcebos.baidu.com,issuecdn.baidupcs.com,log.baidu.com,www.baidu.com,gdt.qq.com,m.taobao.com,vip.iqiyi.com,iface.iqiyi.com,iface2.iqiyi.com,intl.iqiyi.com,d.sinaimg.cn,edit.sinaapp.com,free.sinaimg.cn,saxw.sina.cn,saxw.sina.com.cn,u1.img.mobile.sina.cn,adse.ximalaya.com,api.douban.com,api.jr.mi.com,api.m.mi.com,api.smzdm.com,api.vuevideo.net,api.weibo.cn,weibointl.api.weibo.cn,api.musical.ly,api.tiktokv.com,appconf.mail.163.com,baichuan.baidu.com,connect.facebook.net,cover.baidu.com,ddrk.me,gss0.bdstatic.com,haojia.m.smzdm.com,*.music.126.net,*.music.127.net,img1.126.net,mi.gdt.qq.com,mp.weixin.qq.com,ms.jr.jd.com,msg.umengcloud.com,pan.baidu.com,sdkapp.uve.weibo.com,wbapp.uve.weibo.com,simg.s.weibo.com,static.vuevideo.net,tqt.weibo.cn,vv.video.qq.com,www.inoreader.com,www.ft.com
