--- a/QuX/Advertising.conf
+++ b/QuX/Advertising.conf
@@ -4,107 +4,107 @@
 # AUTHOR: blackmatrix7
 # REPO: https://github.com/blackmatrix7/ios_rule_script
 
-^https?:\/\/(\d{1,3}\.){3}\d{1,3}/(variety|vlive\.qqvideo)\.tc\.qq\.com/ url reject
-^https?:\/\/(a?d|sax)\d.sina.com url reject
-^https?:\/\/(api|promo)\.xueqiu\.com\/promotion\/(display_cache|display_ad|feed_display|search_ad) url reject
-^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
-^https?:\/\/(iyes|(api|hd)\.mobile)\.youku\.com\/(adv|common\/v3\/hudong\/new) url reject-img
-^https?:\/\/.+?\.atm\.youku\.com url reject
-^https?:\/\/.+?\.beacon\.qq\.com url reject-img
-^https?:\/\/.+?\.l\.qq\.com url reject-img
-^https?:\/\/.+?\.tc\.qq\.com\/.+?_p20\d_ url reject
-^https?:\/\/.+?\.tc\.qq\.com\/.+?p20\d\.1\.mp4\? url reject
-^https?:\/\/.+?\/variety.tc.qq.com\/ url reject-img
-^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/app\/activity\/ url reject
-^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/splash\/ url reject
-^https?:\/\/4gimg\.map\.qq\.com\/mwaSplash\/ url reject
-^https?:\/\/[\s\S]*\.baidu\.com/.*?ad[xs]\.php url reject-img
-^https?:\/\/\w+?\.ximalaya\.com\/api\/v\d\/adRealTime url reject
-^https?:\/\/\w+\.beacon\.qq\.com url reject
-^https?:\/\/\w+\.gdt\.qq\.com url reject
-^https?:\/\/\w+\.l\.qq\.com url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alibaba\.advertisementservice\.getadv url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimama\.etao\.config\.query\/.+?etao_advertise url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimusic\.common\.mobileservice\.startinit\/ url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.etao\.noah\.query\/.+tao_splash url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.gateway\.get\/ url reject
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ url reject-200
-^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject
-^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/show\.do url reject
-^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v2\/show url reject
-^https?:\/\/ad\.api\.3g\.youku\.com url reject-img
-^https?:\/\/ad\d\.sina\.com url reject-img
-^https?:\/\/ad\d\.sina\.com.cn url reject-img
-^https?:\/\/adse\.ximalaya\.com\/ting\/feed\?appid= url reject-img
-^https?:\/\/adse\.ximalaya\.com\/ting\/loading\?appid= url reject-img
-^https?:\/\/adse\.ximalaya\.com\/ting\?appid= url reject-img
-^https?:\/\/afd\.baidu\.com\/afd\/entry url reject-img
-^https?:\/\/als\.baidu\.com\/clog\/clog url reject-img
-^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
-^https?:\/\/api\.douban\.com\/v2\/app_ads\/splash url reject-200
-^https?:\/\/api\.jr\.mi\.com\/jr\/api\/playScreen url reject
-^https?:\/\/api\.jr\.mi\.com\/v\d\/adv\/ url reject
-^https?:\/\/api\.m\.mi\.com\/v\d\/app\/start url reject
-^https?:\/\/api\.smzdm\.com\/v2\/util\/banner url reject-img
-^https?:\/\/api\.vuevideo\.net\/api\/v\d\/ad\/ url reject
-^https?:\/\/api\.weibo\.cn\/2\/statuses\/extend\?gsid= url reject
-^https?:\/\/api\d?\.musical\.ly\/api\/ad\/ url reject-img
-^https?:\/\/api\d?\.tiktokv\.com\/api\/ad\/ url reject-img
-^https?:\/\/appconf\.mail\.163\.com\/mmad\/ url reject
-^https?:\/\/baichuan\.baidu\.com\/rs\/adpmobile\/launch url reject-img
-^https?:\/\/bdsp-x\.jd\.com\/adx\/ url reject
-^https?:\/\/connect\.facebook\.net\/en_US\/fbadnw\.js url reject-img
-^https?:\/\/cover.baidu.com\/cover\/page\/dspSwitchAds\/ url reject
-^https?:\/\/d\d.sinaimg.cn url reject
-^https?:\/\/ddrk\.me\/image\/logo_footer\.png$ url reject-img
-^https?:\/\/ddrk\.me\/wp-content\/plugins\/advanced-floating-content-lite\/public\/images\/close\.png url reject-img
-^https?:\/\/edit\.sinaapp\.com\/ua\?t=adv url reject
-^https?:\/\/free\.sinaimg\.cn\/u1\.img\.mobile\.sina\.cn url reject
-^https?:\/\/gss0\.bdstatic\.com\/.+?\/static\/wiseindex\/img\/bd_red_packet\.png url reject-img
-^https?:\/\/haojia\.m\.smzdm\.com\/detail_modul\/banner url reject
-^https?:\/\/iad.*?mat\.music\.12[67]\.net/\w+\.(jpg|mp4) url reject-img
-^https?:\/\/iadmusicmat\.music\.126\.net\/.*?jpg$ url reject
-^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/fusion_switch url reject-img
-^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
-^https?:\/\/img1\.126\.net\/.+?dpi=\w{7,8} url reject-img
-^https?:\/\/img1\.126\.net\/channel14\/ url reject-img
-^https?:\/\/img\.ddrk\.me\/ad190824 url reject-img
-^https?:\/\/img\.ddrk\.me\/cover\.png url reject-img
-^https?:\/\/intl\.iqiyi\.com\/ad_external\/ url reject
-^https?:\/\/intl\.iqiyi\.com\/video\/advertise url reject
-^https?:\/\/log.+?baidu\.com url reject
-^https?:\/\/log\..+?\.baidu\.com url reject-img
-^https?:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject-img
-^https?:\/\/mime\.baidu\.com\/v\d\/IosStart\/getStartInfo$ url reject
-^https?:\/\/mime\.baidu\.com\/v\d\/activity\/advertisement url reject
-^https?:\/\/mp\.weixin\.qq.com\/mp\/ad_complaint url reject
-^https?:\/\/mp\.weixin\.qq.com\/mp\/ad_video url reject
-^https?:\/\/mp\.weixin\.qq.com\/mp\/advertisement_report url reject
-^https?:\/\/mp\.weixin\.qq\.com\/(s|mp)\/(ad_|advertisement|getappmsgad|report|appmsgreport|appmsgpicreport) url reject-img
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
-^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/(new)?na\/m\/getLoadingPicture url reject
-^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/base\/(new)?na\/m\/adInfo url reject
-^https?:\/\/msg\.umengcloud\.com\/admsg\/ url reject
-^https?:\/\/mtteve\.beacon\.qq\.com\/analytics url reject-img
-^https?:\/\/pan\.baidu\.com\/act\/api\/activityentry url reject
-^https?:\/\/pan\.baidu\.com\/rest\/2\.0\/pcs\/adx url reject
-^https?:\/\/sax\w?\.sina\.cn url reject
-^https?:\/\/sax\w?\.sina\.com\.cn url reject
-^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject
-^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php url reject
-^https?:\/\/simg\.s\.weibo\.com\/.+?_ios\d{2}\.gif url reject-img
-^https?:\/\/static\.vuevideo\.net\/styleAssets\/.+?\/splash_ad url reject
-^https?:\/\/static\.vuevideo\.net\/styleAssets\/advertisement\/ url reject
-^https?:\/\/tqt\.weibo\.cn\/.+?advert\.index url reject
-^https?:\/\/tqt\.weibo\.cn\/api\/advert\/ url reject
-^https?:\/\/tqt\.weibo\.cn\/overall\/redirect\.php\?r=(tqt_sdkad|tqtad) url reject
-^https?:\/\/vv\.video\.qq\.com\/getvmind\? url reject
-^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject
-^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
-^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject
-^https?:\/\/www\.inoreader\.com\/adv\/ url reject
-^https?:\/\/www\.ft\.com\/__origami\/service\/image\/v2\/images\/raw\/https%3A%2F%2Fcreatives\.ftimg\.net%2Fads* url reject-img
+# ^https?:\/\/(\d{1,3}\.){3}\d{1,3}/(variety|vlive\.qqvideo)\.tc\.qq\.com/ url reject
+# ^https?:\/\/(a?d|sax)\d.sina.com url reject
+# ^https?:\/\/(api|promo)\.xueqiu\.com\/promotion\/(display_cache|display_ad|feed_display|search_ad) url reject
+# ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
+# ^https?:\/\/(iyes|(api|hd)\.mobile)\.youku\.com\/(adv|common\/v3\/hudong\/new) url reject-img
+# ^https?:\/\/.+?\.atm\.youku\.com url reject
+# ^https?:\/\/.+?\.beacon\.qq\.com url reject-img
+# ^https?:\/\/.+?\.l\.qq\.com url reject-img
+# ^https?:\/\/.+?\.tc\.qq\.com\/.+?_p20\d_ url reject
+# ^https?:\/\/.+?\.tc\.qq\.com\/.+?p20\d\.1\.mp4\? url reject
+# ^https?:\/\/.+?\/variety.tc.qq.com\/ url reject-img
+# ^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/app\/activity\/ url reject
+# ^https?:\/\/3gimg\.qq\.com\/tencentMapTouch\/splash\/ url reject
+# ^https?:\/\/4gimg\.map\.qq\.com\/mwaSplash\/ url reject
+# ^https?:\/\/[\s\S]*\.baidu\.com/.*?ad[xs]\.php url reject-img
+# ^https?:\/\/\w+?\.ximalaya\.com\/api\/v\d\/adRealTime url reject
+# ^https?:\/\/\w+\.beacon\.qq\.com url reject
+# ^https?:\/\/\w+\.gdt\.qq\.com url reject
+# ^https?:\/\/\w+\.l\.qq\.com url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alibaba\.advertisementservice\.getadv url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimama\.etao\.config\.query\/.+?etao_advertise url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alimusic\.common\.mobileservice\.startinit\/ url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.etao\.noah\.query\/.+tao_splash url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.o2o\.ad\.gateway\.get\/ url reject
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.idle\.home\.welcome\/ url reject-200
+# ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.trip\.activity\.querytmsresources\/ url reject
+# ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/show\.do url reject
+# ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v2\/show url reject
+# ^https?:\/\/ad\.api\.3g\.youku\.com url reject-img
+# ^https?:\/\/ad\d\.sina\.com url reject-img
+# ^https?:\/\/ad\d\.sina\.com.cn url reject-img
+# ^https?:\/\/adse\.ximalaya\.com\/ting\/feed\?appid= url reject-img
+# ^https?:\/\/adse\.ximalaya\.com\/ting\/loading\?appid= url reject-img
+# ^https?:\/\/adse\.ximalaya\.com\/ting\?appid= url reject-img
+# ^https?:\/\/afd\.baidu\.com\/afd\/entry url reject-img
+# ^https?:\/\/als\.baidu\.com\/clog\/clog url reject-img
+# ^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
+# ^https?:\/\/api\.douban\.com\/v2\/app_ads\/splash url reject-200
+# ^https?:\/\/api\.jr\.mi\.com\/jr\/api\/playScreen url reject
+# ^https?:\/\/api\.jr\.mi\.com\/v\d\/adv\/ url reject
+# ^https?:\/\/api\.m\.mi\.com\/v\d\/app\/start url reject
+# ^https?:\/\/api\.smzdm\.com\/v2\/util\/banner url reject-img
+# ^https?:\/\/api\.vuevideo\.net\/api\/v\d\/ad\/ url reject
+# ^https?:\/\/api\.weibo\.cn\/2\/statuses\/extend\?gsid= url reject
+# ^https?:\/\/api\d?\.musical\.ly\/api\/ad\/ url reject-img
+# ^https?:\/\/api\d?\.tiktokv\.com\/api\/ad\/ url reject-img
+# ^https?:\/\/appconf\.mail\.163\.com\/mmad\/ url reject
+# ^https?:\/\/baichuan\.baidu\.com\/rs\/adpmobile\/launch url reject-img
+# ^https?:\/\/bdsp-x\.jd\.com\/adx\/ url reject
+# ^https?:\/\/connect\.facebook\.net\/en_US\/fbadnw\.js url reject-img
+# ^https?:\/\/cover.baidu.com\/cover\/page\/dspSwitchAds\/ url reject
+# ^https?:\/\/d\d.sinaimg.cn url reject
+# ^https?:\/\/ddrk\.me\/image\/logo_footer\.png$ url reject-img
+# ^https?:\/\/ddrk\.me\/wp-content\/plugins\/advanced-floating-content-lite\/public\/images\/close\.png url reject-img
+# ^https?:\/\/edit\.sinaapp\.com\/ua\?t=adv url reject
+# ^https?:\/\/free\.sinaimg\.cn\/u1\.img\.mobile\.sina\.cn url reject
+# ^https?:\/\/gss0\.bdstatic\.com\/.+?\/static\/wiseindex\/img\/bd_red_packet\.png url reject-img
+# ^https?:\/\/haojia\.m\.smzdm\.com\/detail_modul\/banner url reject
+# ^https?:\/\/iad.*?mat\.music\.12[67]\.net/\w+\.(jpg|mp4) url reject-img
+# ^https?:\/\/iadmusicmat\.music\.126\.net\/.*?jpg$ url reject
+# ^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/fusion_switch url reject-img
+# ^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
+# ^https?:\/\/img1\.126\.net\/.+?dpi=\w{7,8} url reject-img
+# ^https?:\/\/img1\.126\.net\/channel14\/ url reject-img
+# ^https?:\/\/img\.ddrk\.me\/ad190824 url reject-img
+# ^https?:\/\/img\.ddrk\.me\/cover\.png url reject-img
+# ^https?:\/\/intl\.iqiyi\.com\/ad_external\/ url reject
+# ^https?:\/\/intl\.iqiyi\.com\/video\/advertise url reject
+# ^https?:\/\/log.+?baidu\.com url reject
+# ^https?:\/\/log\..+?\.baidu\.com url reject-img
+# ^https?:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject-img
+# ^https?:\/\/mime\.baidu\.com\/v\d\/IosStart\/getStartInfo$ url reject
+# ^https?:\/\/mime\.baidu\.com\/v\d\/activity\/advertisement url reject
+# ^https?:\/\/mp\.weixin\.qq.com\/mp\/ad_complaint url reject
+# ^https?:\/\/mp\.weixin\.qq.com\/mp\/ad_video url reject
+# ^https?:\/\/mp\.weixin\.qq.com\/mp\/advertisement_report url reject
+# ^https?:\/\/mp\.weixin\.qq\.com\/(s|mp)\/(ad_|advertisement|getappmsgad|report|appmsgreport|appmsgpicreport) url reject-img
+# ^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
+# ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/(new)?na\/m\/getLoadingPicture url reject
+# ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/base\/(new)?na\/m\/adInfo url reject
+# ^https?:\/\/msg\.umengcloud\.com\/admsg\/ url reject
+# ^https?:\/\/mtteve\.beacon\.qq\.com\/analytics url reject-img
+# ^https?:\/\/pan\.baidu\.com\/act\/api\/activityentry url reject
+# ^https?:\/\/pan\.baidu\.com\/rest\/2\.0\/pcs\/adx url reject
+# ^https?:\/\/sax\w?\.sina\.cn url reject
+# ^https?:\/\/sax\w?\.sina\.com\.cn url reject
+# ^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject
+# ^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php url reject
+# ^https?:\/\/simg\.s\.weibo\.com\/.+?_ios\d{2}\.gif url reject-img
+# ^https?:\/\/static\.vuevideo\.net\/styleAssets\/.+?\/splash_ad url reject
+# ^https?:\/\/static\.vuevideo\.net\/styleAssets\/advertisement\/ url reject
+# ^https?:\/\/tqt\.weibo\.cn\/.+?advert\.index url reject
+# ^https?:\/\/tqt\.weibo\.cn\/api\/advert\/ url reject
+# ^https?:\/\/tqt\.weibo\.cn\/overall\/redirect\.php\?r=(tqt_sdkad|tqtad) url reject
+# ^https?:\/\/vv\.video\.qq\.com\/getvmind\? url reject
+# ^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject
+# ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
+# ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject
+# ^https?:\/\/www\.inoreader\.com\/adv\/ url reject
+# ^https?:\/\/www\.ft\.com\/__origami\/service\/image\/v2\/images\/raw\/https%3A%2F%2Fcreatives\.ftimg\.net%2Fads* url reject-img
 
 # YouTube去广告
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
@@ -126,4 +126,6 @@
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
 
-hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.l.qq.com,*.tc.qq.com,ad.sina.com,ad.sina.com.cn,api.xueqiu.com,bdsp-x.jd.com,mobile.youku.com,api.youku.com,hd.youku.com,iyes.youku.com,*.beacon.qq.com,3gimg.qq.com,4gimg.map.qq.com,afd.baidu.com,als.baidu.com,c.tieba.baidu.com,cover.baidu.com,fcvbjbcebos.baidu.com,issuecdn.baidupcs.com,log.baidu.com,www.baidu.com,gdt.qq.com,m.taobao.com,vip.iqiyi.com,iface.iqiyi.com,iface2.iqiyi.com,intl.iqiyi.com,d.sinaimg.cn,edit.sinaapp.com,free.sinaimg.cn,saxw.sina.cn,saxw.sina.com.cn,u1.img.mobile.sina.cn,adse.ximalaya.com,api.douban.com,api.jr.mi.com,api.m.mi.com,api.smzdm.com,api.vuevideo.net,api.weibo.cn,weibointl.api.weibo.cn,api.musical.ly,api.tiktokv.com,appconf.mail.163.com,baichuan.baidu.com,connect.facebook.net,cover.baidu.com,ddrk.me,gss0.bdstatic.com,haojia.m.smzdm.com,*.music.126.net,*.music.127.net,img1.126.net,mi.gdt.qq.com,mp.weixin.qq.com,ms.jr.jd.com,msg.umengcloud.com,pan.baidu.com,sdkapp.uve.weibo.com,wbapp.uve.weibo.com,simg.s.weibo.com,static.vuevideo.net,tqt.weibo.cn,vv.video.qq.com,www.inoreader.com,www.ft.com
+hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
+
+# ,*.l.qq.com,*.tc.qq.com,ad.sina.com,ad.sina.com.cn,api.xueqiu.com,bdsp-x.jd.com,mobile.youku.com,api.youku.com,hd.youku.com,iyes.youku.com,*.beacon.qq.com,3gimg.qq.com,4gimg.map.qq.com,afd.baidu.com,als.baidu.com,c.tieba.baidu.com,cover.baidu.com,fcvbjbcebos.baidu.com,issuecdn.baidupcs.com,log.baidu.com,www.baidu.com,gdt.qq.com,m.taobao.com,vip.iqiyi.com,iface.iqiyi.com,iface2.iqiyi.com,intl.iqiyi.com,d.sinaimg.cn,edit.sinaapp.com,free.sinaimg.cn,saxw.sina.cn,saxw.sina.com.cn,u1.img.mobile.sina.cn,adse.ximalaya.com,api.douban.com,api.jr.mi.com,api.m.mi.com,api.smzdm.com,api.vuevideo.net,api.weibo.cn,weibointl.api.weibo.cn,api.musical.ly,api.tiktokv.com,appconf.mail.163.com,baichuan.baidu.com,connect.facebook.net,cover.baidu.com,ddrk.me,gss0.bdstatic.com,haojia.m.smzdm.com,*.music.126.net,*.music.127.net,img1.126.net,mi.gdt.qq.com,mp.weixin.qq.com,ms.jr.jd.com,msg.umengcloud.com,pan.baidu.com,sdkapp.uve.weibo.com,wbapp.uve.weibo.com,simg.s.weibo.com,static.vuevideo.net,tqt.weibo.cn,vv.video.qq.com,www.inoreader.com,www.ft.com
