--- a/QuX/Youtube_Supplement.conf
+++ b/QuX/Youtube_Supplement.conf
@@ -1,1 +1,2 @@
+# (^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=SH(&.+) url 302 $1&ctier=A$2
 (^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=[A-Z][A-Z](&.+) url 302 $1&ctier=A$2
