--- a/QuX/Spec/ft.conf
+++ b/QuX/Spec/ft.conf
@@ -4,4 +4,7 @@
 ^https:\//d1025gvspu57dc.cloudfront.net\/log\/new_log.php url reject
 ^https:\//creatives\.ftacademy\.cn\/ads url reject
 
-hostname = d1025gvspu57dc.cloudfront.net,creatives.ftacademy.cn
+^https:\//d3vx1eoikmpfkr.cloudfront.net\/index.php\/jsapi\/paywall url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/ft.js
+^https:\//d3vx1eoikmpfkr.cloudfront.net\/log\/new_log.php url reject
+
+hostname = d1025gvspu57dc.cloudfront.net,creatives.ftacademy.cn,d3vx1eoikmpfkr.cloudfront.net
